# reachy_mini_conversation_app

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  pyproject.toml  setup.py  summary.json
.github/: pull_request_template.md
.github/workflows/: lint.yml  pr-hf-space-preview.yml  pytest.yml  release.yml  sync-hf-space.yml  typecheck.yml  uv-lock-check.yml
coverage/: class_index.html  function_index.html  index.html  status.json  z_545d0ca0fcabeb60___init___py.html  z_545d0ca0fcabeb60_base_realtime_py.html  z_545d0ca0fcabeb60_camera_frame_encoding_py.html  z_545d0ca0fcabeb60_config_py.html  z_545d0ca0fcabeb60_console_py.html  z_545d0ca0fcabeb60_conversation_handler_py.html  z_545d0ca0fcabeb60_dance_emotion_moves_py.html  z_545d0ca0fcabeb60_gemini_live_py.html  z_545d0ca0fcabeb60_huggingface_realtime_py.html  z_545d0ca0fcabeb60_idle_policy_py.html  z_545d0ca0fcabeb60_main_py.html  z_545d0ca0fcabeb60_mcp_client_py.html  z_545d0ca0fcabeb60_memory_py.html  z_545d0ca0fcabeb60_moves_py.html  z_545d0ca0fcabeb60_openai_realtime_py.html  z_545d0ca0fcabeb60_personality_py.html  z_545d0ca0fcabeb60_personality_routes_py.html  z_545d0ca0fcabeb60_prompts_py.html  z_545d0ca0fcabeb60_startup_settings_py.html  z_545d0ca0fcabeb60_streaming_py.html  z_545d0ca0fcabeb60_tool_spaces_py.html  z_545d0ca0fcabeb60_utils_py.html  z_9894c718b16fb84e___init___py.html  z_9894c718b16fb84e_background_tool_manager_py.html  z_9894c718b16fb84e_camera_py.html  z_9894c718b16fb84e_core_tools_py.html  z_9894c718b16fb84e_dance_py.html  z_9894c718b16fb84e_forget_py.html  z_9894c718b16fb84e_go_to_sleep_py.html  z_9894c718b16fb84e_idle_do_nothing_py.html  z_9894c718b16fb84e_move_head_py.html  z_9894c718b16fb84e_play_emotion_py.html  z_9894c718b16fb84e_remember_py.html  z_9894c718b16fb84e_stop_dance_py.html  z_9894c718b16fb84e_stop_emotion_py.html  z_9894c718b16fb84e_task_cancel_py.html  (+3 more)
docs/: scheme.mmd
external_content/external_tools/: starter_custom_tool.py
history/: history.jsonl
profiles/bored_teenager/: instructions.txt
profiles/captain_circuit/: instructions.txt
profiles/chess_coach/: instructions.txt
profiles/cosmic_kitchen/: instructions.txt
profiles/default/: instructions.txt
profiles/example/: instructions.txt  sweep_look.py  tools.txt
profiles/hype_bot/: instructions.txt
profiles/mad_scientist_assistant/: instructions.txt
profiles/mars_rover/: instructions.txt
profiles/nature_documentarian/: instructions.txt
profiles/noir_detective/: instructions.txt
profiles/sorry_bro/: instructions.txt
profiles/tedai/: instructions.txt  tools.txt
profiles/time_traveler/: instructions.txt
profiles/victorian_butler/: instructions.txt  tools.txt
src/reachy_mini_conversation_app/: base_realtime.py  camera_frame_encoding.py  camera_worker.py  config.py  console.py  conversation_handler.py  dance_emotion_moves.py  (+15 more)
tests/: conftest.py  test_camera_worker.py  test_config_name_collisions.py  test_console.py  test_external_loading.py  test_gemini_live.py  test_huggingface_realtime.py  test_idle_policy.py  test_mcp_client.py  test_mcp_client_integration.py  test_openai_realtime.py  test_personality_delete.py  test_profile_paths.py  test_startup_settings.py  test_streaming.py  test_tool_space_runtime.py  test_tool_spaces.py  test_utils.py
widgets/: charts.json  nav.json  pie_chart.json  search-index.json  statistic.json  timeline.json  tree-filters.json  tree.json
(+35 files in other folders)
